// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "PriceComponentsProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "money.proto";

// Defines a price in terms of power characteristics.
message PriceComponents {

  // The price per watt hours (Wh).
  google.type.Money real_energy_price = 1;

  // The price per volt-amp hours (VAh).
  google.type.Money apparent_energy_price = 2;

}
